fix(cxl-ui): cxl-app-layout increase action bar z-index
https://app.clickup.com/t/86b0kt8k5

--- a/packages/cxl-ui/scss/cxl-app-layout/_layout.scss
+++ b/packages/cxl-ui/scss/cxl-app-layout/_layout.scss
@@ -53,6 +53,7 @@ $toggle-icon: "lumo:angle-right";
       right: 0;
       bottom: 0;
       left: 0;
+      z-index: 2;
       background-color: var(--lumo-base-color);
 
       &::slotted(*) {
